[gd_scene load_steps=72 format=3 uid="uid://bqp76d8c82ei8"]

[ext_resource type="Texture2D" uid="uid://b4xqkirybewud" path="res://assets/sprites/knight.png" id="1_p0vlq"]
[ext_resource type="Script" uid="uid://bmhlpeh7yx3t5" path="res://scripts/Player.gd" id="1_v6fml"]
[ext_resource type="FontFile" uid="uid://wedt0845wngm" path="res://assets/PixelOperator8-Bold.ttf" id="3_mdl7e"]
[ext_resource type="FontFile" uid="uid://bgbwxdfilqs6" path="res://assets/fonts/PixelOperator8.ttf" id="4_qu4a1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0vlq"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fml"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3li8b"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrixf"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt83"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4as6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1r6t"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0asu"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1a3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4mg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk6la"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrxk4"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg1p0"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2u8p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv10x"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxpi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b437"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nyu3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_priom"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3gi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_akpgi"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumhx"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y32ns"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}],
"loop": false,
"name": &"damage",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0vlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrixf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4as6")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1r6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0asu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk6la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrxk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg1p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2u8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv10x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b437")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nyu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_priom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akpgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumhx")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qu4a1"]
size = Vector2(15, 22)

[sub_resource type="Animation" id="Animation_v6fml"]
resource_name = "move_left"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, -50), Vector2(-100, -50)]
}

[sub_resource type="Animation" id="Animation_3li8b"]
resource_name = "move_right"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-100, -50), Vector2(100, -50)]
}

[sub_resource type="Animation" id="Animation_mdl7e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_70d11"]
resource_name = "ui_visibility"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qu4a1"]
_data = {
&"RESET": SubResource("Animation_mdl7e"),
&"move_left": SubResource("Animation_v6fml"),
&"move_right": SubResource("Animation_3li8b"),
&"ui_visibility": SubResource("Animation_70d11")
}

[sub_resource type="LabelSettings" id="LabelSettings_cw2d6"]
font = ExtResource("3_mdl7e")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_khinc"]
font = ExtResource("4_qu4a1")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_bruh7"]
font = ExtResource("4_qu4a1")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_6eyey"]
font = ExtResource("4_qu4a1")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_d3wef"]
font = ExtResource("4_qu4a1")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_o4126"]
font = ExtResource("4_qu4a1")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_lkdrv"]
font = ExtResource("4_qu4a1")
font_size = 20

[sub_resource type="Theme" id="Theme_p7iby"]
default_font = ExtResource("4_qu4a1")
default_font_size = 25

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_v6fml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y32ns")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_qu4a1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_qu4a1")
}

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 3
layer = 3

[node name="Menu" type="ColorRect" parent="GameOver"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.184314, 0.168627, 1)

[node name="Container" type="ColorRect" parent="GameOver/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 27.0
offset_right = -39.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.25098, 0.227451, 1)

[node name="Label" type="Label" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_top = 80.0
offset_right = 252.0
offset_bottom = 119.0
grow_horizontal = 2
text = "Game Over!"
label_settings = SubResource("LabelSettings_cw2d6")
horizontal_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.345098, 0.317647, 1)

[node name="TimeCompleted" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -95.0
offset_right = 50.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="GameOver/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_right = 546.0
offset_bottom = 27.0
grow_vertical = 2
text = "Time:"
label_settings = SubResource("LabelSettings_khinc")
vertical_alignment = 1

[node name="Value" type="Label" parent="GameOver/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_right = -268.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
text = "0"
label_settings = SubResource("LabelSettings_bruh7")

[node name="Score" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="GameOver/Menu/Container/Score"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 40.0
offset_right = 354.0
offset_bottom = 67.0
grow_vertical = 2
text = "Score"
label_settings = SubResource("LabelSettings_6eyey")

[node name="Value" type="Label" parent="GameOver/Menu/Container/Score"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_top = 40.0
offset_right = -268.0
offset_bottom = 67.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
text = "0"
label_settings = SubResource("LabelSettings_d3wef")

[node name="Ranking" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -55.0
offset_right = 50.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="GameOver/Menu/Container/Ranking"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 80.0
offset_right = 354.0
offset_bottom = 107.0
grow_vertical = 2
text = "Ranking:"
label_settings = SubResource("LabelSettings_o4126")

[node name="Value" type="Label" parent="GameOver/Menu/Container/Ranking"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_top = 80.0
offset_right = -268.0
offset_bottom = 107.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
text = "0"
label_settings = SubResource("LabelSettings_lkdrv")

[node name="RestartButton" type="Button" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 545.0
offset_top = -205.0
offset_right = 815.0
offset_bottom = -115.0
grow_vertical = 0
theme = SubResource("Theme_p7iby")
text = "Restart"

[node name="BurnTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="GameOver/Menu/Container/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="BurnTimer" to="." method="_on_burn_timer_timeout"]
